CSS fix to work on mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,7 +19,7 @@ body {
 }
 
 header, section {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 header {
